* Finished session management * Working on Hotel Request currently

--- a/lib/templates/xml/OTA_HotelAvailLLSRQ.xml.hbs
+++ b/lib/templates/xml/OTA_HotelAvailLLSRQ.xml.hbs
@@ -1,1 +1,11 @@
-OTA_HotelAvailLLSRQ
+<OTA_HotelAvailRQ>
+  <AvailRequestSegment>
+    <GuestCounts Count="2"/>
+    <HotelSearchCriteria>
+      <Criterion>
+        <HotelRef Latitude="32.78" Longitude="-96.81"/>
+      </Criterion>
+    </HotelSearchCriteria>
+    <TimeSpan End="04-24" Start="04-22"/>
+  </AvailRequestSegment>
+</OTA_HotelAvailRQ>
