* Adding domain, needs to be dynamic though

--- a/lib/templates/xml/_header.xml.hbs
+++ b/lib/templates/xml/_header.xml.hbs
@@ -26,7 +26,7 @@
           <!--"Organization" is used to specify the client application's organization, i.e. PseudoCityCode, or airline code.-->
           <Organization>{{ipcc}}</Organization>
           <!--"Domain" is used to specify the client application's domain, i.e. "DEFAULT" for TN-based subscribers, or the particular airline code for SabreSonic-based subscribers.-->
-          <Domain>DEFAULT</Domain>
+          <Domain>AA</Domain>
         </wsse:UsernameToken>
       {{/if}}
     </wsse:Security>
