--- a/lib/templates/xml/OTA_HotelAvailLLSRQ.xml.hbs
+++ b/lib/templates/xml/OTA_HotelAvailLLSRQ.xml.hbs
@@ -13,7 +13,7 @@
         }}
         <!--"AirportTransportation" is used to search for hotels based upon available airport transportation.-->
         <!--"FireSafetyApproved" is used to search for hotels based upon fire safety rating.-->
-        <HotelFeature FireSafetyApproved="true" />
+        <!-- <HotelFeature FireSafetyApproved="true" /> -->
         <!--Search for hotel availability based upon a latitude/longitude.-->
         {{#if latitude}}
           <HotelRef Latitude="{{latitude}}" Longitude="{{longitude}}" /> <!-- @todo Should we use this? Might not need -->
@@ -39,14 +39,14 @@
     <!--"RateAssured" is used to query for assured rates.-->
     <!--"SuppressRackRate" is used to omit rack rates from the response.-->
     <!-- <RatePlanCandidates PromotionalSpot="C" RateAssured="true" SuppressRackRate="false"> -->
-    <RatePlanCandidates RateAssured="true">
+    <!-- <RatePlanCandidates RateAssured="true"> -->
       <!--"Code" is used to specify a contract or negotiated rate code.-->
       <!-- <ContractNegotiatedRateCode>SAB</ContractNegotiatedRateCode>
       <ContractNegotiatedRateCode>TVY</ContractNegotiatedRateCode> -->
       <!--"RatePlanCode" is used to specify a Rate Plan Code (rate type).-->
       <!-- <RatePlanCode>GOV</RatePlanCode>
       <RatePlanCode>N</RatePlanCode> -->
-    </RatePlanCandidates>
+    <!-- </RatePlanCandidates> -->
     <!--"End" is used to return the last date of the specified hotel stay.-->
     <!--"End" follows this format: MM-DD-->
     <!--"Start" is used to return the first date of the specified hotel stay.-->
