--- a/lib/templates/xml/RailShopRQ.xml.hbs
+++ b/lib/templates/xml/RailShopRQ.xml.hbs
@@ -1,5 +1,5 @@
 <!--"ResponseType" Indicates whether the response should be restricted to Fares or Schedules or provide Availability including, where applicable, Fares.-->
-<rs:RailShopRQ Version="1.11.0" ResponseType="Fares" TargetSystem="2V" PrimaryLangID="en-us" xmlns:rs="http://webservices.sabre.com/sabreXML/RCP/rs" xmlns:rcmn="http://webservices.sabre.com/sabreXML/RCP/common">
+<rs:RailShopRQ Version="1.15.0" ResponseType="Fares" MarketingCarrier="2V" PrimaryLangID="en-us" xmlns:rs="http://webservices.sabre.com/sabreXML/RCP/rs" xmlns:rcmn="http://webservices.sabre.com/sabreXML/RCP/common">
 	<rs:OffersSearchCriteria>
 		<!--A collection of information about the locations for which availability is to be checked. It may be repeated to query availability of each individual train in multiple train segments for a specified route.-->
 		<rs:AvailQueryCriteria>
